feat: Projeto Full Stack finalizado - SEPLAG-MT (Java/Spring + React/Tailwind)