@@ -1,41 +1,66 @@
 package br.gov.mt.seplag.api.security;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final RateLimitFilter rateLimitFilter;
 
+    // Construtor manual para evitar erros de Lombok
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter, RateLimitFilter rateLimitFilter) {
+        this.jwtAuthFilter = jwtAuthFilter;
+        this.rateLimitFilter = rateLimitFilter;
+    }
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http        
-        .cors(cors -> cors.configurationSource(request -> {
-            var opt = new org.springframework.web.cors.CorsConfiguration();
-            // Porta padrão do Vite (Frontend)
-            opt.setAllowedOrigins(java.util.List.of("http://localhost:5173")); 
-            opt.setAllowedMethods(java.util.List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-            opt.setAllowedHeaders(java.util.List.of("*"));
-            opt.setAllowCredentials(true);
-            return opt;
-        }))
+        http
+            // 1. Configuração de CORS (Libera a conversa com o React)
+            .cors(cors -> cors.configurationSource(request -> {
+                CorsConfiguration config = new CorsConfiguration();
+                config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:5174"));
+                config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                config.setAllowedHeaders(List.of("*"));
+                config.setAllowCredentials(true);
+                return config;
+            }))
+            
+            // 2. Desabilita CSRF (Segurança para APIs REST sem estado)
             .csrf(csrf -> csrf.disable())
+            
+            // 3. Define que a API não guarda sessão (Stateless)
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            
+            // 4. Regras de Acesso às Rotas
             .authorizeHttpRequests(auth -> auth
-                // Forma moderna: sem necessidade de importar Matchers extras
-                .requestMatchers("/api/auth/**", "/swagger-ui/**", "/api/regionais/**","/v3/api-docs/**").permitAll()
+                // Rotas Abertas (Sem necessidade de Token para seu teste agora)
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/api/regionais/**").permitAll()
+                .requestMatchers("/api/artists/**").permitAll() 
+                
+                // Swagger e Documentação (Requisito do Edital)
+                .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+                
+                // Qualquer outra rota exige autenticação
                 .anyRequest().authenticated()
             )
+            
+            // 5. Injeção dos Filtros Sênior (Rate Limit e JWT)
             .addFilterBefore(rateLimitFilter, UsernamePasswordAuthenticationFilter.class)
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
